--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "an project for the enterpreneurship development",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "node event-ease-auth/server.js"
   },
   "keywords": [
     "ED",
